lib_LTLIBRARIES = libgtknotebookng.la

ACLOCAL_AMFLAGS = -I m4

AM_CFLAGS = ${GTKNOTEBOOKNG_CFLAGS} -Wall -g -O0

libgtknotebookng_la_LIBADD = ${GTKNOTEBOOKNG_LIBS}

libgtknotebookng_la_SOURCES = \
										gtknotebookng.c \
										gtknotebookng.h \
										gtknotebookbutton.c \
										gtknotebookbutton.h
